refactor: optimise module structure and remove duplicate code
- Merge ReservationValidator into SeatReservationService
- Merge TicketTypeValidationService into TicketTypeService
- Merge RefundCalculationService and RefundValidationService into RefundService
- Merge TicketCreationService, TicketValidationService, TicketRetrievalService into TicketService
- Merge PaymentValidator and PaymentNotificationService into PaymentService