@@ -1,11 +1,13 @@
-package ua.lviv.bas.cinema.service.booking.refund;
+package ua.lviv.bas.cinema.service.booking;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -17,6 +19,7 @@ import ua.lviv.bas.cinema.domain.audit.AuditAction;
 import ua.lviv.bas.cinema.domain.bonus.BonusTransactionType;
 import ua.lviv.bas.cinema.domain.booking.Refund;
 import ua.lviv.bas.cinema.domain.booking.RefundItem;
+import ua.lviv.bas.cinema.domain.booking.SeatReservation;
 import ua.lviv.bas.cinema.domain.booking.status.PaymentStatus;
 import ua.lviv.bas.cinema.domain.booking.status.RefundItemStatus;
 import ua.lviv.bas.cinema.domain.booking.status.RefundStatus;
@@ -35,7 +38,6 @@ import ua.lviv.bas.cinema.mapper.booking.RefundMapper;
 import ua.lviv.bas.cinema.repository.booking.RefundRepository;
 import ua.lviv.bas.cinema.repository.ticket.TicketRepository;
 import ua.lviv.bas.cinema.service.bonus.BonusService;
-import ua.lviv.bas.cinema.service.booking.payment.PaymentProcessingService;
 import ua.lviv.bas.cinema.service.integration.audit.AuditService;
 import ua.lviv.bas.cinema.service.integration.payment.PaymentGatewayService;
 import ua.lviv.bas.cinema.service.shared.NumberGeneratorService;
@@ -44,16 +46,15 @@ import ua.lviv.bas.cinema.service.shared.NumberGeneratorService;
 @Service
 @RequiredArgsConstructor
 public class RefundService {
+
 	private final TicketRepository ticketRepository;
 	private final RefundRepository refundRepository;
-	private final PaymentProcessingService paymentProcessingService;
+	private final PaymentService paymentService;
 	private final PaymentGatewayService paymentGatewayService;
 	private final BonusService bonusService;
 	private final RefundRules refundRules;
 	private final RefundMapper refundMapper;
 	private final RefundItemMapper refundItemMapper;
-	private final RefundCalculationService calculationService;
-	private final RefundValidationService validationService;
 	private final NumberGeneratorService numberGenerator;
 	private final AuditService auditService;
 
@@ -61,7 +62,7 @@ public class RefundService {
 	public RefundPreviewResponse getRefundPreview(RefundPreviewRequest request, Long userId) {
 		Ticket ticket = findActiveTicket(request.ticketId(), userId);
 
-		String validationError = validationService.validateRefund(ticket);
+		String validationError = validateRefund(ticket);
 		if (validationError != null) {
 			return createNonRefundablePreview(ticket, validationError);
 		}
@@ -71,14 +72,14 @@ public class RefundService {
 			return createNonRefundablePreview(ticket, "Payment cannot be refunded via API. Contact support.");
 		}
 
-		return calculationService.createPreviewResponse(ticket, refundRules);
+		return createPreviewResponse(ticket);
 	}
 
 	@Transactional
 	public RefundResponse processRefund(RefundRequest request, Long userId) {
 		Ticket ticket = findActiveTicket(request.ticketId(), userId);
 
-		String validationError = validationService.validateRefund(ticket);
+		String validationError = validateRefund(ticket);
 		if (validationError != null) {
 			throw new TicketNotRefundableException(validationError);
 		}
@@ -91,13 +92,13 @@ public class RefundService {
 		LocalDateTime sessionTime = ticket.getBooking().getSession().getStartTime();
 		BigDecimal percentage = refundRules.getRefundPercentage(sessionTime);
 
-		BigDecimal refundAmount = calculationService.calculateRefundAmount(ticket.getFinalPrice(), percentage);
-		Integer bonusPointsToRefund = calculationService.calculateBonusRefund(ticket.getBonusPointsUsed(), percentage);
+		BigDecimal refundAmount = calculateRefundAmount(ticket.getFinalPrice(), percentage);
+		Integer bonusPointsToRefund = calculateBonusRefund(ticket.getBonusPointsUsed(), percentage);
 
 		Refund refund = createRefundRecord(ticket, refundAmount, percentage, bonusPointsToRefund, request.reason());
 
 		try {
-			paymentProcessingService.refundPayment(refund.getPayment(), refundAmount,
+			paymentService.refundPayment(refund.getPayment(), refundAmount,
 					"Refund for ticket #" + ticket.getUniqueCode());
 
 			if (bonusPointsToRefund != null && bonusPointsToRefund > 0) {
@@ -118,7 +119,7 @@ public class RefundService {
 			auditService.logChange("Refund", refund.getId(), "Refund #" + refund.getId(), AuditAction.CREATED, null,
 					details);
 
-			return createSuccessResponse(refund);
+			return buildRefundResponse(refund);
 
 		} catch (Exception e) {
 			refund.setStatus(RefundStatus.REJECTED);
@@ -137,7 +138,78 @@ public class RefundService {
 	@Transactional(readOnly = true)
 	public List<RefundResponse> getUserRefunds(Long userId) {
 		List<Refund> refunds = refundRepository.findByUserIdOrderByCreatedDateDesc(userId);
-		return refunds.stream().map(this::createSuccessResponse).toList();
+		return refunds.stream().map(this::buildRefundResponse).collect(Collectors.toList());
+	}
+
+	private String validateRefund(Ticket ticket) {
+		if (ticket.getStatus() != TicketStatus.ACTIVE) {
+			return "Ticket is not active. Current status: " + ticket.getStatus();
+		}
+
+		LocalDateTime sessionTime = ticket.getBooking().getSession().getStartTime();
+		if (!refundRules.isRefundable(sessionTime)) {
+			return "Refund is not available for this session";
+		}
+
+		if (ticket.getRefund() != null) {
+			return "Ticket has already been refunded";
+		}
+
+		if (sessionTime.isBefore(LocalDateTime.now())) {
+			return "Session has already started or finished";
+		}
+
+		return null;
+	}
+
+	private BigDecimal calculateRefundAmount(BigDecimal price, BigDecimal percentage) {
+		return price.multiply(percentage).divide(BigDecimal.valueOf(100), 2, RoundingMode.HALF_UP);
+	}
+
+	private Integer calculateBonusRefund(Integer bonusPointsUsed, BigDecimal percentage) {
+		if (bonusPointsUsed == null || bonusPointsUsed == 0) {
+			return 0;
+		}
+		return (int) (bonusPointsUsed * percentage.doubleValue() / 100);
+	}
+
+	private String formatRemainingTime(LocalDateTime sessionTime) {
+		long hours = ChronoUnit.HOURS.between(LocalDateTime.now(), sessionTime);
+		long minutes = ChronoUnit.MINUTES.between(LocalDateTime.now(), sessionTime) % 60;
+
+		if (hours > 0 && minutes > 0) {
+			return String.format("%d hours %d minutes", hours, minutes);
+		} else if (hours > 0) {
+			return String.format("%d hours", hours);
+		} else if (minutes > 0) {
+			return String.format("%d minutes", minutes);
+		} else {
+			return "Less than a minute";
+		}
+	}
+
+	private RefundPreviewResponse createPreviewResponse(Ticket ticket) {
+		LocalDateTime sessionTime = ticket.getBooking().getSession().getStartTime();
+		BigDecimal percentage = refundRules.getRefundPercentage(sessionTime);
+		BigDecimal refundAmount = calculateRefundAmount(ticket.getFinalPrice(), percentage);
+		BigDecimal feeAmount = ticket.getFinalPrice().subtract(refundAmount);
+
+		String seatInfo = "N/A";
+		if (ticket.getBooking().getSeatReservations() != null && !ticket.getBooking().getSeatReservations().isEmpty()) {
+			SeatReservation bookedSeat = ticket.getBooking().getSeatReservations().get(0);
+			seatInfo = String.format("Row %d, Seat %d", bookedSeat.getSeat().getRow(),
+					bookedSeat.getSeat().getNumber());
+		}
+
+		return new RefundPreviewResponse(ticket.getId(), ticket.getUniqueCode(),
+				ticket.getBooking().getSession().getMovie().getTitle(), sessionTime,
+				ticket.getBooking().getSession().getHall().getName(), seatInfo, ticket.getOriginalPrice(),
+				ticket.getFinalPrice(), refundAmount, percentage, feeAmount,
+				BigDecimal.valueOf(100).subtract(percentage), ticket.getBonusPointsUsed(),
+				calculateBonusRefund(ticket.getBonusPointsUsed(), percentage), refundRules.getPolicyName(sessionTime),
+				refundRules.getPolicyDescription(sessionTime), true, null, sessionTime.minusMinutes(30),
+				formatRemainingTime(sessionTime), ticket.getPurchaseTime().toString(),
+				ticket.getTicketType().getDisplayName());
 	}
 
 	private Ticket findActiveTicket(Long ticketId, Long userId) {
@@ -168,24 +240,21 @@ public class RefundService {
 		Refund refund = Refund.builder().payment(ticket.getPayment()).user(ticket.getUser()).totalAmount(refundAmount)
 				.totalBonusPointsToDeduct(bonusPointsToRefund).reason(reason).status(RefundStatus.PENDING).build();
 
-		BigDecimal safePercentage = percentage.setScale(2, RoundingMode.HALF_UP);
-
 		RefundItem refundItem = RefundItem.builder().refund(refund).ticket(ticket).ticketPrice(ticket.getFinalPrice())
-				.refundPercentage(safePercentage).refundAmount(refundAmount).bonusPointsToDeduct(bonusPointsToRefund)
-				.status(RefundItemStatus.PENDING).build();
+				.refundPercentage(percentage.setScale(2, RoundingMode.HALF_UP)).refundAmount(refundAmount)
+				.bonusPointsToDeduct(bonusPointsToRefund).status(RefundItemStatus.PENDING).build();
 
 		refund.getItems().add(refundItem);
 		return refundRepository.save(refund);
 	}
 
-	private RefundResponse createSuccessResponse(Refund refund) {
+	private RefundResponse buildRefundResponse(Refund refund) {
 		RefundResponse response = refundMapper.toRefundResponse(refund);
-		return new RefundResponse(response.id(), numberGenerator.generateRefundNumber(refund), response.status(),
-				response.totalAmount(), response.totalBonusPointsToDeduct(), response.reason(), response.processedBy(),
-				response.processedAt(), response.createdAt(), response.paymentId(), "CARD",
-				refund.getItems() != null
-						? refund.getItems().stream().map(refundItemMapper::toRefundItemResponse).toList()
-						: null,
+		return new RefundResponse(
+				response.id(), numberGenerator.generateRefundNumber(refund), response.status(), response.totalAmount(),
+				response.totalBonusPointsToDeduct(), response.reason(), response.processedBy(), response.processedAt(),
+				response.createdAt(), response.paymentId(), "CARD", refund.getItems() != null ? refund.getItems()
+						.stream().map(refundItemMapper::toRefundItemResponse).collect(Collectors.toList()) : null,
 				"Refund processed successfully", "3-5 business days");
 	}
 }
